# GW2_RotaHelper

./: CHANGELOG.md  CMakeLists.txt  requirements.txt
data/bench/: benchmark_report.xlsx
data/bench/alac/condition/: condition_alacrity_amalgam_steamshrieker_spear_v4.json  condition_alacrity_amalgam_two_kits_spear_v4.json  condition_alacrity_antiquary_scepter_dagger_only_v4.json  condition_alacrity_antiquary_spear_only_v4.json  condition_alacrity_evoker_pistol_warhorn_v4.json  condition_alacrity_mechanist_one_kit_pistol_pistol_v4.json  condition_alacrity_mirage_staff_axe_torch_v4.json  condition_alacrity_renegade_shortbow_mace_axe_v4.json  condition_alacrity_renegade_spear_mace_axe_v4.json  condition_alacrity_renegade_spear_only_v4.json  condition_alacrity_scourge_scepter_torch_pistol_v4.json  condition_alacrity_specter_scepter_dagger_dagger_v4.json  condition_alacrity_specter_scepter_pistol_scepter_pistol_v4.json  condition_alacrity_specter_spear_only_v4.json  condition_alacrity_tempest_fire_only_scepter_focus_v4.json  condition_alacrity_tempest_pistol_warhorn_v4.json  condition_alacrity_tempest_scepter_warhorn_v4.json  condition_alacrity_willbender_pistol_pistol_axe_torch_v4.json  condition_boon_chronomancer_staff_scepter_torch_v4.json
data/bench/alac/power/: celestial_alacrity_tempest_scepter_warhorn_v4.json  power_alacrity_amalgam_hammer_v4.json  power_alacrity_antiquary_rifle_only_v4.json  power_alacrity_antiquary_spear_axe_pistol_v4.json  power_alacrity_antiquary_staff_dagger_pistol_v4.json  power_alacrity_bladesworn_overcharged_cartridges_sword_pistol_v4.json  power_alacrity_bladesworn_signets_sword_pistol_v4.json  power_alacrity_evoker_scepter_dagger_v4.json  power_alacrity_luminary_longbow_greatsword_v4.json  power_alacrity_luminary_spear_greatsword_v4.json  power_alacrity_mechanist_rifle_v4.json  power_alacrity_mechanist_sword_pistol_v4.json  power_alacrity_mechanist_two_kits_sword_pistol_v4.json  power_alacrity_paragon_sword_axe_dagger_mace_v4.json  power_alacrity_renegade_greatsword_sword_sword_v4.json  power_alacrity_renegade_staff_sword_sword_v4.json  power_alacrity_tempest_hammer_v4.json  power_alacrity_tempest_sword_dagger_v4.json  power_alacrity_willbender_greatsword_sword_focus_v4.json  power_alacrity_willbender_spear_greatsword_v4.json  power_boon_chronomancer_greatsword_dagger_focus_v4.json  power_boon_chronomancer_greatsword_dagger_sword_v4.json  power_boon_chronomancer_greatsword_spear_v4.json  power_boon_chronomancer_spear_dagger_sword_v4.json
data/bench/dps/condition/: condition_amalgam_steamshrieker_spear_v4.json  condition_amalgam_three_kits_spear_v4.json  condition_antiquary_scepter_dagger_v4.json  condition_antiquary_spear_only_v4.json  condition_berserker_longbow_sword_torch_v4.json  condition_catalyst_pistol_dagger_v4.json  condition_conduit_spear_mace_axe_v4.json  (+35 more)
internal_data/html/: build_metadata.json
scripts/: create_benchmark_excel.py  get_html_logs.py  get_skill_mapping.py  html_log_to_json.py
src/: FileUtils.cpp  LogData.cpp  OptionsRender.cpp  OptionsRender.h  RenderUtils.cpp  RotationRender.cpp  RotationRender.h  Settings.cpp  Settings.h  TypesUtils.cpp  Version.h  entry.cpp
(+280 files in other folders)
